# ros2-obstacle-avoidance-bot

./: README.md  main.py  package.xml  setup.py
launch/: obstacle_avoidance.launch.py
obstacle_avoidance/: bot_controller.py
