<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>Basic ROS2 obstacle avoidance bot</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>

